# xorcist-utils

./: Cargo.toml  wasmer.toml
src/: bin.rs  lib.rs  main.rs
src/cmd/: mod.rs
src/cmd/about/: me.rs  mod.rs  website.rs
src/cmd/info/: mod.rs  queezy.rs  ring.rs  sarvatra.rs  truck_navigation.rs  wasix.rs  wasmer.rs
src/cmd/social/: github.rs  instagram.rs  linkedin.rs  mod.rs  twitter.rs
