[package]
name = "xorcist-utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "x"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.3.0", features = ["derive"] }
colored = "2.0.4"
anyhow = "1.0.75"
